add-content-image-css

--- a/envoie-projet.html
+++ b/envoie-projet.html
@@ -14,13 +14,15 @@
 
         <div class="layout"> 
             <header> 
-                <div class="bloc-head_background"><img src="" alt="">
-                    <nav> 
-                        <ul> 
-                            <li href="#">Hébergements </li>
-                            <li href="#">Activités </li>
-                        </ul>
-                    </nav><a href="#">subscribe </a>
+                <div class="bloc-head_background">
+                    <img src="images/logo/Reservia@3x.png" alt="Reservia">
+                        <nav> 
+                            <ul> 
+                                <a href="#"> <li></li>Hébergements </li> </a>
+                                <a href="#"> <li> Activités </li> </a>
+                            </ul>
+                        </nav>
+                    <a href="#">subscribe </a>
                 </div>
             </header>
             <section> 
