--- a/envoie-projet.html
+++ b/envoie-projet.html
@@ -8,6 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
         <meta name="format-detection" content="telephone=no">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100&display=swap" rel="stylesheet"> 
     </head>
 
     <body>
@@ -15,14 +18,18 @@
         <div class="layout"> 
             <header> 
                 <div class="bloc-head_background">
-                    <img src="images/logo/Reservia@3x.png" alt="Reservia">
+                    <img class="logo_page" src="images/logo/Reservia@3x.png" alt="Reservia">
                         <nav> 
                             <ul> 
-                                <a href="#"> <li></li>Hébergements </li> </a>
-                                <a href="#"> <li> Activités </li> </a>
+                                <a class="space_menu" href="#"> 
+                                    <li> Hébergements </li> 
+                                </a>
+                                <a href="#"> 
+                                    <li> Activités </li> 
+                                </a>
                             </ul>
                         </nav>
-                    <a href="#">subscribe </a>
+                        <a href="#">subscribe </a>
                 </div>
             </header>
             <section> 
