--- a/envoie-projet.html
+++ b/envoie-projet.html
@@ -21,25 +21,21 @@
                     <img class="logo_page" src="images/logo/Reservia@3x.png" alt="Reservia">
                         <nav> 
                             <ul> 
-                                <a class="space_menu" href="#"> 
-                                    <li> Hébergements </li> 
-                                </a>
-                                <a href="#"> 
-                                    <li> Activités </li> 
-                                </a>
+                                <li> <a href="#"> Hébergements </a> </li> 
+                                <li> <a href="#">  Activités </a> </li> 
                             </ul>
                         </nav>
-                        <a href="#">subscribe </a>
+                        <a class="sub-button" href="#">S'inscrire </a>
                 </div>
             </header>
             <section> 
                 <div class="bloc-research"> 
-                    <h2>title h2 </h2>
-                    <p>lorem ipsum pompi </p>
+                    <h2>Trouvez votre hébergements pour vos vacances de rêve </h2>
+                    <p>En plein centre ville ou en pleine nature </p>
                     <div class="reserch-line"> 
                         <input type="button">
                         <input type="text">
-                        <input type="button">
+                        <input type="button" value="rechercher">
                     </div>
                     <div class="search-filter"> 
                         <p>Filtres </p>
