add-css-header/research

--- a/envoie-projet.html
+++ b/envoie-projet.html
@@ -10,7 +10,8 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/4446b122ed.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -31,18 +32,18 @@
             <section> 
                 <div class="bloc-research"> 
                     <h2>Trouvez votre hébergements pour vos vacances de rêve </h2>
-                    <p>En plein centre ville ou en pleine nature </p>
+                    <p class="research-text_description">En plein centre ville ou en pleine nature </p>
                     <div class="reserch-line"> 
-                        <input type="button">
-                        <input type="text">
-                        <input type="button" value="rechercher">
+                        <a href="#"> <i class="fas fa-map-marker-alt"></i> </a>
+                        <input class="research-input_text" type="text" value="Marseille, France">
+                        <input class="btn-general"type="button" value="Rechercher">
                     </div>
                     <div class="search-filter"> 
                         <p>Filtres </p>
-                        <input type="button" value="Économique">
-                        <input type="button" value="Familial">
-                        <input type="button" value="Romantique">
-                        <input type="button" value="Animaux autorisés">
+                        <div class="eco_button"> <input class="btn-general" type="button" value="Économique"> </div>
+                        <div class="family_button"> <input class="btn-general" type="button" value="Familial"> </div>
+                        <div class="heart_button"> <input class="btn-general" type="button" value="Romantique"> </div>
+                        <div class="animal_button"> <input class="btn-general" type="button" value="Animaux autorisés"> </div>
                     </div>
                     <div class="info-search"> <img src="" alt="">
                         <p>plus de 500 logements sont disponibles dans cette ville </p>
@@ -54,46 +55,64 @@
                     <div class="bloc-resa_loc"> 
                         <h3>Hébergements à Marseille </h3>
                         <div class="bloc-card_location">
-                            <div><img src="content/images/play.png"/>
+                            <div>
+                                <img src="images\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg"/>
                                 <p>Titre</p>
-                                <p>description</p><img src="content/images/play.png"/>
+                                <p>description</p>
+                                <img src="content/images/play.png"/>
                             </div>
-                            <div><img src="content/images/play.png"/>
+                            <div>
+                                <img src="images\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg"/>
                                 <p>Titre</p>
-                                <p>description</p><img src="content/images/play.png"/>
+                                <p>description</p>
+                                <img src="content/images/play.png"/>
                             </div>
-                            <div><img src="content/images/play.png"/>
+                            <div>
+                                <img src="images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg"/>
                                 <p>Titre</p>
-                                <p>description</p><img src="content/images/play.png"/>
+                                <p>description</p>
+                                <img src="content/images/play.png"/>
                             </div>
-                            <div><img src="content/images/play.png"/>
+                            <div>
+                                <img src="images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg"/>
                                 <p>Titre</p>
-                                <p>description</p><img src="content/images/play.png"/>
+                                <p>description</p>
+                                <img src="content/images/play.png"/>
                             </div>
-                            <div><img src="content/images/play.png"/>
+                            <div>
+                                <img src="images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg"/>
                                 <p>Titre</p>
-                                <p>description</p><img src="content/images/play.png"/>
+                                <p>description</p>
+                                <img src="content/images/play.png"/>
                             </div>
-                            <div><img src="content/images/play.png"/>
+                            <div>
+                                <img src="images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg"/>
                                 <p>Titre</p>
-                                <p>description</p><img src="content/images/play.png"/>
+                                <p>description</p>
+                                <img src="content/images/play.png"/>
                             </div>
                         </div>
                     </div>
                     <div class="bloc-resa_famous">
                         <h3>Les plus populaires 
                             <div class="bloc-card_famous">
-                                <div><img src="content/images/play.png"/>
+                                <div>
+                                    <img src="content/images/play.png"/>
                                     <p>Titre</p>
-                                    <p>description</p><img src="content/images/play.png"/>
+                                    <p>description</p>
+                                    <img src="content/images/play.png"/>
                                 </div>
-                                <div><img src="content/images/play.png"/>
+                                <div>
+                                    <img src="content/images/play.png"/>
                                     <p>Titre</p>
-                                    <p>description</p><img src="content/images/play.png"/>
+                                    <p>description</p>
+                                    <img src="content/images/play.png"/>
                                 </div>
-                                <div><img src="content/images/play.png"/>
+                                <div>
+                                    <img src="content/images/play.png"/>
                                     <p>Titre</p>
-                                    <p>description</p><img src="content/images/play.png"/>
+                                    <p>description</p>
+                                    <img src="content/images/play.png"/>
                                 </div>
                             </div>
                         </h3>
@@ -103,22 +122,28 @@
             <section> 
                 <div class="bloc-activity"> 
                     <h3>Activités à Marseille
-                        <div> <img src="content/images/play.png"/>
+                        <div>
+                            <img src="content/images/play.png"/>
                             <p>Titre</p>
                         </div>
-                        <div> <img src="content/images/play.png"/>
+                        <div> 
+                            <img src="content/images/play.png"/>
                             <p>Titre</p>
                         </div>
-                        <div> <img src="content/images/play.png"/>
+                        <div> 
+                            <img src="content/images/play.png"/>
                             <p>Titre</p>
                         </div>
-                        <div> <img src="content/images/play.png"/>
+                        <div> 
+                            <img src="content/images/play.png"/>
                             <p>Titre</p>
                         </div>
-                        <div> <img src="content/images/play.png"/>
+                        <div> 
+                            <img src="content/images/play.png"/>
                             <p>Titre</p>
                         </div>
-                        <div> <img src="content/images/play.png"/>
+                        <div> 
+                            <img src="content/images/play.png"/>
                             <p>Titre</p>
                         </div>
                     </h3>
