add-css-header/research-fix

--- a/envoie-projet.html
+++ b/envoie-projet.html
@@ -40,12 +40,13 @@
                     </div>
                     <div class="search-filter"> 
                         <p>Filtres </p>
-                        <div class="eco_button"> <input class="btn-general" type="button" value="Économique"> </div>
-                        <div class="family_button"> <input class="btn-general" type="button" value="Familial"> </div>
-                        <div class="heart_button"> <input class="btn-general" type="button" value="Romantique"> </div>
-                        <div class="animal_button"> <input class="btn-general" type="button" value="Animaux autorisés"> </div>
+                        <div class="btn-general eco_icon"> <input type="button" value="Économique"> </div>
+                        <div class="btn-general family_icon"> <input type="button" value="Familial"> </div>
+                        <div class="btn-general heart_icon"> <input type="button" value="Romantique"> </div>
+                        <div class="btn-general animal_icon"> <input type="button" value="Animaux autorisés"> </div>
                     </div>
-                    <div class="info-search"> <img src="" alt="">
+                    <div class="info-search">
+                        <i class="fas fa-info"></i>
                         <p>plus de 500 logements sont disponibles dans cette ville </p>
                     </div>
                 </div>
