add-css-section

--- a/envoie-projet.html
+++ b/envoie-projet.html
@@ -56,46 +56,46 @@
                     <div class="bloc-resa_loc"> 
                         <h3>Hébergements à Marseille </h3>
                         <div class="bloc-card_location">
-                            <div>
-                                <img src="images\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg"/>
-                                <p>Titre</p>
+                            <div class="card-location">
+                                <img class="card-img" src="images\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg"/>
+                                <p class="titre-card">Titre</p>
                                 <p>description</p>
                                 <img src="content/images/play.png"/>
                             </div>
-                            <div>
-                                <img src="images\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg"/>
-                                <p>Titre</p>
+                            <div class="card-location">
+                                <img class="card-img" src="images\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg"/>
+                                <p class="titre-card">Titre</p>
                                 <p>description</p>
                                 <img src="content/images/play.png"/>
                             </div>
-                            <div>
-                                <img src="images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg"/>
-                                <p>Titre</p>
+                            <div class="card-location">
+                                <img class="card-img" src="images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg"/>
+                                <p class="titre-card">Titre</p>
                                 <p>description</p>
                                 <img src="content/images/play.png"/>
                             </div>
-                            <div>
-                                <img src="images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg"/>
-                                <p>Titre</p>
+                            <div class="card-location">
+                                <img class="card-img" src="images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg"/>
+                                <p class="titre-card">Titre</p>
                                 <p>description</p>
                                 <img src="content/images/play.png"/>
                             </div>
-                            <div>
-                                <img src="images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg"/>
-                                <p>Titre</p>
+                            <div class="card-location">
+                                <img class="card-img" src="images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg"/>
+                                <p class="titre-card">Titre</p>
                                 <p>description</p>
                                 <img src="content/images/play.png"/>
                             </div>
-                            <div>
-                                <img src="images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg"/>
-                                <p>Titre</p>
+                            <div class="card-location">
+                                <img class="card-img" src="images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg"/>
+                                <p class="titre-card">Titre</p>
                                 <p>description</p>
                                 <img src="content/images/play.png"/>
                             </div>
                         </div>
                     </div>
                     <div class="bloc-resa_famous">
-                        <h3>Les plus populaires 
+                        <h3>Les plus populaires</h3>
                             <div class="bloc-card_famous">
                                 <div>
                                     <img src="content/images/play.png"/>
@@ -116,13 +116,12 @@
                                     <img src="content/images/play.png"/>
                                 </div>
                             </div>
-                        </h3>
+                        </div>
                     </div>
-                </div>
             </section>
             <section> 
                 <div class="bloc-activity"> 
-                    <h3>Activités à Marseille
+                    <h3>Activités à Marseille</h3>
                         <div>
                             <img src="content/images/play.png"/>
                             <p>Titre</p>
@@ -147,8 +146,7 @@
                             <img src="content/images/play.png"/>
                             <p>Titre</p>
                         </div>
-                    </h3>
-                </div>
+                    </div>
             </section>
             <footer> 
                 <div class="bloc-footer_background"> 
