add-fix-css-picture-more

--- a/envoie-projet.html
+++ b/envoie-projet.html
@@ -60,60 +60,58 @@
                                 <img class="card-img" src="images\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg"/>
                                 <p class="titre-card">Titre</p>
                                 <p>description</p>
-                                <img src="content/images/play.png"/>
                             </div>
                             <div class="card-location">
                                 <img class="card-img" src="images\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg"/>
                                 <p class="titre-card">Titre</p>
                                 <p>description</p>
-                                <img src="content/images/play.png"/>
                             </div>
                             <div class="card-location">
                                 <img class="card-img" src="images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg"/>
                                 <p class="titre-card">Titre</p>
                                 <p>description</p>
-                                <img src="content/images/play.png"/>
                             </div>
                             <div class="card-location">
                                 <img class="card-img" src="images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg"/>
                                 <p class="titre-card">Titre</p>
                                 <p>description</p>
-                                <img src="content/images/play.png"/>
                             </div>
                             <div class="card-location">
                                 <img class="card-img" src="images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg"/>
                                 <p class="titre-card">Titre</p>
                                 <p>description</p>
-                                <img src="content/images/play.png"/>
                             </div>
                             <div class="card-location">
                                 <img class="card-img" src="images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg"/>
                                 <p class="titre-card">Titre</p>
                                 <p>description</p>
-                                <img src="content/images/play.png"/>
                             </div>
                         </div>
+                        <h3> Afficher plus </h3>
                     </div>
                     <div class="bloc-resa_famous">
                         <h3>Les plus populaires</h3>
                             <div class="bloc-card_famous">
-                                <div>
-                                    <img src="content/images/play.png"/>
-                                    <p>Titre</p>
-                                    <p>description</p>
-                                    <img src="content/images/play.png"/>
+                                <div class="card-famous">
+                                    <img class="card-img" src="images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"/>
+                                        <div class="bloc-description_famous">
+                                            <p class="titre-card">Titre</p>
+                                            <p>description</p>
+                                        </div>
                                 </div>
-                                <div>
-                                    <img src="content/images/play.png"/>
-                                    <p>Titre</p>
-                                    <p>description</p>
-                                    <img src="content/images/play.png"/>
+                                <div class="card-famous">
+                                    <img class="card-img" src="images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg"/>
+                                        <div class="bloc-description_famous">
+                                            <p class="titre-card">Titre</p>
+                                            <p>description</p>
+                                        </div>
                                 </div>
-                                <div>
-                                    <img src="content/images/play.png"/>
-                                    <p>Titre</p>
-                                    <p>description</p>
-                                    <img src="content/images/play.png"/>
+                                <div class="card-famous">
+                                    <img class="card-img" src="images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg"/>
+                                        <div class="bloc-description_famous">
+                                            <p class="titre-card">Titre</p>
+                                            <p>description</p>
+                                        </div>
                                 </div>
                             </div>
                         </div>
@@ -122,29 +120,33 @@
             <section> 
                 <div class="bloc-activity"> 
                     <h3>Activités à Marseille</h3>
-                        <div>
-                            <img src="content/images/play.png"/>
-                            <p>Titre</p>
+                        <div class="bloc-flex_activity">
+                            <div>
+                                <img src="images\activites\4_small\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"/>
+                                <p>Titre</p>
+                            </div>
+                            <div> 
+                                <img src="images\activites\4_small\paul-hermann-QFTrLdQIRhI-unsplash.jpg"/>
+                                <p>Titre</p>
+                            </div>
+                            <div> 
+                                <img src="images\activites\4_small\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"/>
+                                <p>Titre</p>
+                            </div>
                         </div>
-                        <div> 
-                            <img src="content/images/play.png"/>
-                            <p>Titre</p>
-                        </div>
-                        <div> 
-                            <img src="content/images/play.png"/>
-                            <p>Titre</p>
-                        </div>
-                        <div> 
-                            <img src="content/images/play.png"/>
-                            <p>Titre</p>
-                        </div>
-                        <div> 
-                            <img src="content/images/play.png"/>
-                            <p>Titre</p>
-                        </div>
-                        <div> 
-                            <img src="content/images/play.png"/>
-                            <p>Titre</p>
+                        <div class="bloc-flex_activity">
+                            <div> 
+                                <img src="images\activites\4_small\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"/>
+                                <p>Titre</p>
+                            </div>
+                            <div> 
+                                <img src="images\activites\4_small\florian-wehde-xW9e8gdotxI-unsplash.jpg"/>
+                                <p>Titre</p>
+                            </div>
+                            <div> 
+                                <img src="images\activites\4_small\lena-paulin-wH2-EJoDcV0-unsplash.jpg"/>
+                                <p>Titre</p>
+                            </div>
                         </div>
                     </div>
             </section>
